...
                                .tint(.white)
                                .accessibilityIdentifier("progressView")
                        }
                        Spacer()
                    }
                }
                .accessibilityIdentifier("LoginButton")
                .background(
                    Color.gradientGreen
                        .matchedGeometryEffect(id: "background", in: namespace)
                )
                .clipShape(Capsule())
                .padding(.vertical)
...
